--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "egg": "^2.2.1",
+    "egg-cors": "^2.1.0",
     "egg-scripts": "^2.5.0",
     "ioredis": "^3.2.2",
     "js-to-java": "^2.6.0",
